# simple-vsop2013-rs

./: Cargo.toml  LICENSE  README.md
script/: .gitignore  generate_code.py  generate_testcases.py  vsop2013.py
src/: coeff.rs  generated.rs  lib.rs  utils.rs
